# text-to-speech-api54bed5c5-09b3-49c5-acd0-b0129b820903

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: convert_text_to_speech_service.py  retrieve_audio_file_service.py  server.py  status_check_service.py
